# zxc-cafe

./: .env.example  .gitignore  README.md  coffee_bot.session  coffee_shop_bot.session  manage.py  pyproject.toml
bonus/: admin.py  forms.py  models.py
bonus/management/commands/: runbot.py
bonus/migrations/: 0001_initial.py  0002_rename_user_tguser.py  0003_tguser_role.py  0004_order.py  0005_alter_tguser_role.py  0006_category_product.py  0007_alter_order_user_alter_tguser_role.py  0008_order_session_name_orderitem.py
bot/: admin.py  filters.py  models.py  utils.py  views.py
bot/management/commands/: run_telegram_bot.py
bot/migrations/: 0001_initial.py  0002_customer_role.py  0003_order_status.py  0004_customer_coffees_free_alter_orderitem_order.py  0005_order_free_drinks.py  0006_customer_first_name.py  0007_order_user_created.py  0008_order_total_paid.py
fixtures/: categories.json  products.json
templates/admin/: change_list.html  index.html
templates/admin/bot/order/: change_list.html
templates/admin/bot/productsalesreport/: change_list.html
zxc/: asgi.py  settings.py  urls.py  wsgi.py
