[tool.poetry]
name = "zxc-cafe"
version = "0.1.0"
description = ""
authors = ["Vasile Corobceanu <vasile.corobceanu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-telegram-bot = "^21.6"
uvicorn = "^0.31.0"
gunicorn = "^23.0.0"
qrcode = "^7.4.2"
pillow = "^10.4.0"
telethon = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
